@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
                 xmlns:lxslt="http://xml.apache.org/xslt"
-                xmlns:redirect="org.apache.xalan.xslt.extensions.Redirect"
+                xmlns:redirect2="org.apache.xalan.xslt.extensions.Redirect"
+		xmlns:redirect="http://xml.apache.org/xalan/redirect"
                 extension-element-prefixes="redirect"
                 version="1.0">  
   <xsl:output method="html" indent="yes"/>
+
+  <xsl:param name='destdir' select='"."'/>
 
   <xsl:template match="/">
     <html>
@@ -15,12 +18,22 @@
   </xsl:template>
 
   <xsl:template match="document">
+    <xsl:variable name='filename' select='concat($destdir,"/",@name,".html")'/>
+    <xsl:result-document href='{$filename}'>
+      <h2>
+	<xsl:apply-templates select='@name'/>
+      </h2>
+      <xsl:apply-templates/>
+    </xsl:result-document>    
+
+    <!--
     <redirect:open file="{@name}.html"/>
     <redirect:write file="{@name}.html">
       <h2><xsl:value-of select="@name"/></h2>
       <xsl:apply-templates/>
     </redirect:write>
     <redirect:close file="{@name}.html"/>
+    -->    
   </xsl:template>
 
   <xsl:template match="emphasis">
@@ -63,6 +76,19 @@
   </xsl:template>
 
   <xsl:template match="chapter">
+    <xsl:variable name='filename' select='concat($destdir,"/",@name,".html")'/>
+    <xsl:result-document href='{$filename}'>
+      <html>
+	<body>
+	  <h2>
+	    <xsl:apply-templates select='@name'/>
+	  </h2>
+	  <xsl:apply-templates/>
+	</body>
+      </html>
+    </xsl:result-document>
+    
+    <!--
     <redirect:open file="{@name}.html"/>
     <redirect:write file="{@name}.html">
       <html><body>
@@ -71,6 +97,7 @@
       </body></html>
     </redirect:write>
     <redirect:close file="{@name}.html"/>
+    -->
   </xsl:template>
 
   <xsl:template match="section">
@@ -81,6 +108,10 @@
   <xsl:template match="subsection">
     <h3><xsl:value-of select="@name"/></h3>
     <xsl:apply-templates/>
+  </xsl:template>
+
+  <xsl:template match='text()'>
+    <xsl:value-of select='.'/>
   </xsl:template>
 
 </xsl:stylesheet>
